--- a/index.html
+++ b/index.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cash Register</title>
-    <link rel="stylesheet" href="./styles.css">
-  </head>
-  <body>
-    <main>
-      <h1>Cash Register Project</h1>
-      <div id="change-due"></div>
-   <div>
-  <label for="cash">Cash</label>
-  <input type="number" id="cash" placeholder="Enter cash">
-  <button id="purchase-btn">Purchase</button>
-</div>
-<div id="change-due"></div>
-<div id="price-screen"></div>
-<div id="cash-drawer-display"></div>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Cash Register</title>
+  <link rel="stylesheet" href="./styles.css"/>
+</head>
+<body>
+  <main>
+    <h1>Cash Register Project</h1>
+
+    <!-- Input Section -->
+    <div class="input-section">
+      <label for="cash">Cash:</label>
+      <input type="number" id="cash" placeholder="Enter cash" />
+      <button id="purchase-btn">Purchase</button>
+    </div>
+
+    <!-- Output Messages -->
+    <div id="change-due"></div>
+
+    <!-- Cash Register Display -->
+    <div class="container">
+      <!-- Top Display -->
+      <div class="top-display-screen-container">
+        <p id="price-screen" class="price-screen"></p>
+        <div class="connector"></div>
       </div>
-      <div class="container">
-        <div class="top-display-screen-container">
-          <p id="price-screen" class="price-screen"></p>
-          <div class="connector"></div>
-        </div>
-        <div class="top-register">
-         <div class="top-register cash-buttons">
+
+      <!-- Top Register -->
+      <div class="top-register">
+        <div class="cash-buttons">
           <button class="cash-button">7</button>
           <button class="cash-button">8</button>
           <button class="cash-button">9</button>
@@ -43,15 +48,15 @@
           <button class="cash-button">=</button>
           <button class="cash-button">/</button>
         </div>
-          <div id="cash-drawer-display" class="cash-drawer-display">
-          </div>
-        </div>
-        <div class="bottom-register">
-          <div class="circle"></div>
-        </div>
+        <div id="cash-drawer-display" class="cash-drawer-display"></div>
       </div>
-    </main>
-    <script src="./script.js"></script>
+
+      <!-- Bottom Register -->
+      <div class="bottom-register">
+        <div class="circle"></div>
+      </div>
+    </div>
+  </main>
+  <script src="./script.js"></script>
 </body>
 </html>
-
